[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractor"
version = "0.1.0"
description = "PyTorch reference implementation of persistent writable control state episodes."
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.setuptools.packages.find]
include = ["abstractor*"]
